# JumpCoach-ML

./: .gitignore  HOW TO SETUP PROJECT DIRECTORY.txt  MAIN LIBRARIES.txt  README.md  pyproject.toml
scripts/: build_baseline.py
src/jumpcoach_ml/features/: angles.py
src/jumpcoach_ml/pipeline/: baseline.py
src/jumpcoach_ml/pose/: mediapipe_pose.py
src/jumpcoach_ml/preprocessing/: pose_cleaning.py
src/jumpcoach_ml/video/: frames.py
testVideos/: IMG_1350.mov
tests/: test_angles.py
